@@ -3,7 +3,7 @@ SUBDIRS = init
 confdir = $(sysconfdir)/lightdm
 dist_conf_DATA = lightdm.conf
 
-dbusconfdir = $(DBUS_SYS_DIR)
+dbusconfdir = $(sysconfdir)/dbus-1/system.d
 dist_dbusconf_DATA = org.freedesktop.DisplayManager.conf
 
 dist_man1_MANS = lightdm.1
